@@ -19,6 +19,18 @@ if not sorts[sort] then
     qerror(('unknown sort: "%s"'):format(sort))
 end
 
+local fulfillment_threshold =
+    { 300, 200, 100, -999, -9999, -99999 }
+
+local function getFulfillment(focus_level)
+    for i = 1, 6 do
+        if focus_level >= fulfillment_threshold[i] then
+            return i
+        end
+    end
+    return 7
+end
+
 local fort_needs = {}
 
 local units = dfhack.gui.getSelectedUnit(true)
@@ -39,6 +51,10 @@ for _, unit in ipairs(units) do
         needs.strength = (needs.strength or 0) + need.need_level
         needs.focus = (needs.focus or 0) + need.focus_level
         needs.freq = (needs.freq or 0) + 1
+
+        local level = getFulfillment(need.focus_level)
+        ensure_key(needs, 'fulfillment', {0, 0, 0, 0, 0, 0, 0})
+        needs.fulfillment[level] = needs.fulfillment[level] + 1
     end
 end
 
@@ -49,15 +65,20 @@ for id, need in pairs(fort_needs) do
         strength=need.strength,
         focus=need.focus,
         freq=need.freq,
+        fulfillment=need.fulfillment
     })
 end
 
 table.sort(sorted_fort_needs, sorts[sort])
 
 -- Print sorted output
-local fmt = '%20s  %8s  %12s  %9s'
-print(fmt:format("Need", "Strength", "Focus Impact", "Frequency"))
-print(fmt:format("----", "--------", "------------", "---------"))
+local fmt = '%20s  %8s  %12s  %9s  %35s'
+print(fmt:format("Need", "Strength", "Focus Impact", "Frequency", "Num. Unfettered -> Badly distracted"))
+print(fmt:format("----", "--------", "------------", "---------", "-----------------------------------"))
 for _, need in ipairs(sorted_fort_needs) do
-    print(fmt:format(need.id, need.strength, need.focus, need.freq))
+    local res = ""
+    for i = 1, 7 do
+        res = res..(('%5d'):format(need.fulfillment[i]))
+    end
+    print(fmt:format(need.id, need.strength, need.focus, need.freq, res))
 end
